change size of congrats box to avoid overflow

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ h1 {
 .congrats {
     padding: 3px;
     font-size: 48px;
-    width: 300px;
+    width: 466px;
     text-align: center;
     margin-top: 0px;
 }
